compiler/tools/fpp-syntax/test/include-cycle-1.ref.txt
fpp-syntax
[ local path prefix ]/compiler/tools/fpp-syntax/test/cycle-3.fpp: 1.1
include "cycle-1.fpp"
^
  included at [ local path prefix ]/compiler/tools/fpp-syntax/test/cycle-2.fpp: 1.1
  included at [ local path prefix ]/compiler/tools/fpp-syntax/test/cycle-1.fpp: 1.1
error: include cycle:
  [ local path prefix ]/compiler/tools/fpp-syntax/test/cycle-1.fpp includes
  [ local path prefix ]/compiler/tools/fpp-syntax/test/cycle-2.fpp includes
  [ local path prefix ]/compiler/tools/fpp-syntax/test/cycle-3.fpp includes
  [ local path prefix ]/compiler/tools/fpp-syntax/test/cycle-1.fpp
